# ansible-raspi-setup

./: .gitignore  README.md  galaxy.yml  inventory.txt  main.yml  pyproject.toml  requirements.yml  vars.yml.example
