[tool.poetry]
name = "sys-setup"
version = "0.1.0"
description = ""
authors = ["Vincent T <vncnttejas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^6.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
